adds alert if selected revision is missing, also user can simply check if revision is missing in revision list in new window with output true/false (for simplicity). related to issue #48. also this change lead to small refactoring in jar loader class so i hope i didn't put new error in working code